--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "~4.1.5"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.173"
+    "@types/lodash": "^4.14.173",
+    "@types/react-router-dom": "^5.1.9"
   }
 }
